Add search/save button and search bar

--- a/index.html
+++ b/index.html
@@ -14,6 +14,21 @@
 
 <body>
 
+  <main> 
+    <!--search and save section-->
+  <section id="search-area-title" class="search-area"
+      <h2 class="search-area-title"></h2>
+        <h2> Search for food!</h2>
+  <form id="search-form" class="form w-100">
+
+    <!--search bar and search button-->
+    <input id="search-input" class="form-input w-100" type="text" placeholder="Search!">
+    <button class="btn searchBtn btn-info btn-block" id="fetch-button">Search</button>
+   
+     <!--save button-->
+    <button class="btn saveBtn btn-info btn-block" id="save-button">Save</button>
+  </section>
+</main>
   <script src="./assets/js/script.js"></script>
 </body>
 
