added header and cards for logging info

--- a/index.html
+++ b/index.html
@@ -9,10 +9,134 @@
   <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:400,400i,700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
   <link rel="stylesheet" href="./assets/css/style.css" />
-  <title></title>
+  <title>You are what you EAT</title>
 </head>
 
+
 <body>
+  <header class="navbar navbar-expand-md navbar-light bg-light py-4">
+    <div class="container-fluid">
+      <h1 class="navbar-brand mb-0 fs-3">You Are What You EAT</h1>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" href="#">Link 1</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Link 2</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Link 3</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </header>
+ </div>
+  
+ <div class="container-fluid pt-5">
+ <div class="row">
+    <div class="col-md-4">
+      <div class="card">
+        <div class="card-body">
+          <h5 class="card-title">Nutritional Value:</h5>
+          <h6 class="card-subtitle mb-2 text-muted"></h6>
+          <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse fugiat veniam commodi
+            voluptatem accusamus possimus a fugit, consectetur iure doloribus? Nemo, molestias? Rerum, dignissimos
+            obcaecati
+            accusamus error voluptates doloribus repudiandae.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+ </div>
+ <div class="container-fluid">
+  <div class="row">
+     <div class="col-md-4">
+       <div class="card">
+         <div class="card-body">
+           <h5 class="card-title">Nutritional Value:</h5>
+           <h6 class="card-subtitle mb-2 text-muted"></h6>
+           <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse fugiat veniam commodi
+             voluptatem accusamus possimus a fugit, consectetur iure doloribus? Nemo, molestias? Rerum, dignissimos
+             obcaecati
+             accusamus error voluptates doloribus repudiandae.</p>
+         </div>
+       </div>
+     </div>
+   </div>
+  </div>
+  <div class="container-fluid" >
+    <div class="row">
+       <div class="col-md-4">
+         <div class="card">
+           <div class="card-body">
+             <h5 class="card-title">Nutritional Value:</h5>
+             <h6 class="card-subtitle mb-2 text-muted"></h6>
+             <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse fugiat veniam commodi
+               voluptatem accusamus possimus a fugit, consectetur iure doloribus? Nemo, molestias? Rerum, dignissimos
+               obcaecati
+               accusamus error voluptates doloribus repudiandae.</p>
+           </div>
+         </div>
+       </div>
+     </div>
+    </div>
+    <div class="container-fluid">
+      <div class="row">
+         <div class="col-md-4">
+           <div class="card">
+             <div class="card-body">
+               <h5 class="card-title">Nutritional Value:</h5>
+               <h6 class="card-subtitle mb-2 text-muted"></h6>
+               <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse fugiat veniam commodi
+                 voluptatem accusamus possimus a fugit, consectetur iure doloribus? Nemo, molestias? Rerum, dignissimos
+                 obcaecati
+                 accusamus error voluptates doloribus repudiandae.</p>
+             </div>
+           </div>
+         </div>
+       </div>
+      </div>
+      <div class="container-fluid">
+        <div class="row">
+           <div class="col-md-4">
+             <div class="card">
+               <div class="card-body">
+                 <h5 class="card-title">Nutritional Value:</h5>
+                 <h6 class="card-subtitle mb-2 text-muted"></h6>
+                 <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse fugiat veniam commodi
+                   voluptatem accusamus possimus a fugit, consectetur iure doloribus? Nemo, molestias? Rerum, dignissimos
+                   obcaecati
+                   accusamus error voluptates doloribus repudiandae.</p>
+               </div>
+             </div>
+           </div>
+         </div>
+        </div>
+        <div class="container-fluid">
+          <div class="row">
+             <div class="col-md-4">
+               <div class="card">
+                 <div class="card-body">
+                   <h5 class="card-title">Nutritional Value:</h5>
+                   <h6 class="card-subtitle mb-2 text-muted"></h6>
+                   <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse fugiat veniam commodi
+                     voluptatem accusamus possimus a fugit, consectetur iure doloribus? Nemo, molestias? Rerum, dignissimos
+                     obcaecati
+                     accusamus error voluptates doloribus repudiandae.</p>
+                 </div>
+               </div>
+             </div>
+           </div>
+          </div>
+  
+
+
 
   <script src="./assets/js/script.js"></script>
 </body>
