added some CSS and html

--- a/assets/index.html
+++ b/assets/index.html
@@ -9,11 +9,11 @@
   <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:400,400i,700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
   <link rel="stylesheet" href="./assets/css/style.css" />
-  <title>You are what you EAT</title>
+  <title>You Are What You Eat</title>
 </head>
 
-
 <body>
+
   <header class="navbar navbar-expand-md navbar-light bg-light py-4">
     <div class="container-fluid">
       <h1 class="navbar-brand mb-0 fs-3">You Are What You EAT</h1>
