--- a/index.html
+++ b/index.html
@@ -54,6 +54,13 @@
   <ul class="foodlist"></ul>
  </div>
   
+ <div id="dailytotal" class="col-lg">
+  <h2>Daily Totals:</h2>
+  <p>Calories:<span id="Calories"></span></p>
+  <p>Transfat:<span id="Transfat"></span></p> 
+  <p>Total Fat:<span id="total-fat"></span></p>
+ </div>
+ 
  <div id="card-container">
  <div class="container-fluid col-lg pt-5">
  <div class="row">
