--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
   <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:400,400i,700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
   <link rel="stylesheet" href="./assets/css/style.css" />
-  <title>You are what you EAT</title>
+  <title>You Are What You Eat</title>
 </head>
 
-
 <body>
+
   <header class="navbar navbar-expand-md navbar-light bg-light py-4">
     <div class="container-fluid">
       <h1 class="navbar-brand mb-0 fs-3">You Are What You EAT</h1>
@@ -54,13 +54,6 @@
   <ul class="foodlist"></ul>
  </div>
   
- <div id="dailytotal" class="col-lg">
-  <h2>Daily Totals:</h2>
-  <p>Calories:<span id="Calories"></span></p>
-  <p>Transfat:<span id="Transfat"></span></p> 
-  <p>Total Fat:<span id="total-fat"></span></p>
- </div>
- 
  <div id="card-container">
  <div class="container-fluid col-lg pt-5">
  <div class="row">
