--- a/index.html
+++ b/index.html
@@ -39,9 +39,10 @@
 
   <div id="search-container" class="container-fluid col-sm text-center"> 
     <!--search and save section-->
-  <section id="search-area-title" class="search-area"
+  <section id="search-area-title" class="search-area">
       <h2 class="search-area-title"></h2>
         <h2> Search for food!</h2>
+      </section>
   <form id="search-form" class="form w-100">
 
     <!--search bar and search button-->
