--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
   <div id="card-container">
     <div class="container-fluid col-lg pt-5">
-      <div class="row">
+      <div id="card-display" class="row">
         <div class="col-md-6">
           <div class="card">
             <div class="card-body">
