change html and css for pexel api

--- a/index.html
+++ b/index.html
@@ -45,11 +45,9 @@
       <h2> Search for food!</h2>
     </section>
     <form id="search-form" class="form w-100">
-
       <!--search bar and search button-->
       <input id="search-input" class="form-input w-100" type="text" placeholder="Search!">
       <button class="btn searchBtn btn-info btn-block" id="fetch-button">Search</button>
-
       <!--save button-->
       <button class="btn saveBtn btn-info btn-block" id="save-button">Save</button>
       </section>
@@ -69,84 +67,9 @@
         <div class="col-md-6">
           <div class="card">
             <div class="card-body">
-              <h5 class="card-title">Nutritional Value:</h5>
+              <h5 class="card-title">Nutritional Value of:</h5>
               <h6 class="card-subtitle mb-2 text-muted"></h6>
-              <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse fugiat veniam commodi
-                voluptatem accusamus possimus a fugit, consectetur iure doloribus? Nemo, molestias? Rerum, dignissimos
-                obcaecati
-                accusamus error voluptates doloribus repudiandae.</p>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-6">
-          <div class="card">
-            <div class="card-body">
-              <h5 class="card-title">Nutritional Value:</h5>
-              <h6 class="card-subtitle mb-2 text-muted"></h6>
-              <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse fugiat veniam commodi
-                voluptatem accusamus possimus a fugit, consectetur iure doloribus? Nemo, molestias? Rerum, dignissimos
-                obcaecati
-                accusamus error voluptates doloribus repudiandae.</p>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-6">
-          <div class="card">
-            <div class="card-body">
-              <h5 class="card-title">Nutritional Value:</h5>
-              <h6 class="card-subtitle mb-2 text-muted"></h6>
-              <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse fugiat veniam commodi
-                voluptatem accusamus possimus a fugit, consectetur iure doloribus? Nemo, molestias? Rerum, dignissimos
-                obcaecati
-                accusamus error voluptates doloribus repudiandae.</p>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-6">
-          <div class="card">
-            <div class="card-body">
-              <h5 class="card-title">Nutritional Value:</h5>
-              <h6 class="card-subtitle mb-2 text-muted"></h6>
-              <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse fugiat veniam commodi
-                voluptatem accusamus possimus a fugit, consectetur iure doloribus? Nemo, molestias? Rerum, dignissimos
-                obcaecati
-                accusamus error voluptates doloribus repudiandae.</p>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-6">
-          <div class="card">
-            <div class="card-body">
-              <h5 class="card-title">Nutritional Value:</h5>
-              <h6 class="card-subtitle mb-2 text-muted"></h6>
-              <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse fugiat veniam commodi
-                voluptatem accusamus possimus a fugit, consectetur iure doloribus? Nemo, molestias? Rerum, dignissimos
-                obcaecati
-                accusamus error voluptates doloribus repudiandae.</p>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-6">
-          <div class="card">
-            <div class="card-body">
-              <h5 class="card-title">Nutritional Value:</h5>
-              <h6 class="card-subtitle mb-2 text-muted"></h6>
-              <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse fugiat veniam commodi
-                voluptatem accusamus possimus a fugit, consectetur iure doloribus? Nemo, molestias? Rerum, dignissimos
-                obcaecati
-                accusamus error voluptates doloribus repudiandae.</p>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-6">
-          <div class="card">
-            <div class="card-body">
-              <h5 class="card-title">Nutritional Value:</h5>
-              <h6 class="card-subtitle mb-2 text-muted"></h6>
-              <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse fugiat veniam commodi
-                voluptatem accusamus possimus a fugit, consectetur iure doloribus? Nemo, molestias? Rerum, dignissimos
-                obcaecati
-                accusamus error voluptates doloribus repudiandae.</p>
+              <p id="nutritional-card" class="card-text"></p>
             </div>
           </div>
         </div>
@@ -165,10 +88,7 @@
       </div>
     </div>
   </div>
-
-
-
-
+  <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
   <script src="./assets/js/script.js"></script>
 </body>
 
