Added a bunch of reformatting and cleaning up

--- a/index.html
+++ b/index.html
@@ -45,13 +45,14 @@
       <h2> Search for food!</h2>
     </section>
     <form id="search-form" class="form w-100">
+      <div id="search-image"></div>
       <!--search bar and search button-->
       <input id="search-input" class="form-input w-100" type="text" placeholder="Search!">
       <button class="btn searchBtn btn-info btn-block" id="fetch-button">Search</button>
       <!--save button-->
       <button class="btn saveBtn btn-info btn-block" id="save-button">Save</button>
       </section>
-      <ul class="foodlist"></ul>
+      <ul class="foodlist" style = "list-style-type: none; padding-left: 20px;"></ul>
   </div>
 
   <div id="dailytotal" class="col-lg">
