--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
 
-  <header class="navbar navbar-expand-md navbar-light bg-light py-4">
+  <header class="navbar navbar-expand-md py-4 navbar-custom">
     <div class="container-fluid">
       <h1 class="navbar-brand mb-0 fs-3">You Are What You EAT</h1>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -52,7 +52,7 @@
       <!--save button-->
       <button class="btn saveBtn btn-info btn-block" id="save-button">Save</button>
       </section>
-      <ul class="foodlist" style = "list-style-type: none; padding-left: 20px;"></ul>
+      <ul class="foodlist" style = "list-style-type: none; padding-left: 0px;"></ul>
   </div>
 
   <div id="dailytotal" class="col-lg">
