--- a/index.html
+++ b/index.html
@@ -15,26 +15,10 @@
 
 <body>
 
-  <header class="navbar navbar-expand-md py-4 navbar-custom">
+  <header class="text-center">
     <div class="container-fluid">
-      <h1 class="navbar-brand mb-0 fs-3">You Are What You EAT</h1>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link" href="#">Link 1</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Link 2</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Link 3</a>
-          </li>
-        </ul>
-      </div>
+      <h1 class="navbar-brand mb-0 fs-3 p-4">You Are What You EAT</h1>
+
     </div>
   </header>
 
@@ -47,7 +31,7 @@
     <form id="search-form" class="form w-100">
       <div id="search-image"></div>
       <!--search bar and search button-->
-      <input id="search-input" class="form-input w-100" type="text" placeholder="Search!">
+      <input id="search-input" class="form-input w-100" type="text" placeholder="100g Orange Juice">
       <button class="btn searchBtn btn-info btn-block" id="fetch-button">Search</button>
       <!--save button-->
       <button class="btn saveBtn btn-info btn-block" id="save-button">Save</button>
@@ -64,27 +48,12 @@
 
   <div id="card-container">
     <div class="container-fluid col-lg pt-5">
+      <h3>Types of Food Consumed:</h3>
       <div id="card-display" class="row">
         <div class="col-md-6">
-          <div class="card">
-            <div class="card-body">
-              <h5 class="card-title">Nutritional Value of:</h5>
-              <h6 class="card-subtitle mb-2 text-muted"></h6>
-              <p id="nutritional-card" class="card-text"></p>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-6">
-          <div class="card">
-            <div class="card-body">
-              <h5 class="card-title">Nutritional Value:</h5>
-              <h6 class="card-subtitle mb-2 text-muted"></h6>
-              <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse fugiat veniam commodi
-                voluptatem accusamus possimus a fugit, consectetur iure doloribus? Nemo, molestias? Rerum, dignissimos
-                obcaecati
-                accusamus error voluptates doloribus repudiandae.</p>
-            </div>
-          </div>
+          <h5 class="card-title"></h5>
+          <h6 class="card-subtitle mb-2 text-muted"></h6>
+          <p id="nutritional-card" class="card-text"></p>
         </div>
       </div>
     </div>
