added categories in daily totals

--- a/index.html
+++ b/index.html
@@ -41,9 +41,11 @@
 
   <div id="dailytotal" class="col-lg">
     <h2>Daily Totals:</h2>
-    <p>Calories:<span id="Calories"></span></p>
-    <p>Transfat:<span id="Transfat"></span></p>
-    <p>Total Fat:<span id="total-fat"></span></p>
+    <p>Calories:<span id="calories"></span></p>
+    <p>Carbohydrate:<span id="carbs"></span></p>
+    <p>Protein:<span id="totprotein"></span></p>
+    <p>Transfat:<span id="trans-fat"></span></p>
+    <p>SaturatedFat:<span id="saturated-fatt"></span></p>
   </div>
 
   <div id="card-container">
