added javascript for daily totals

--- a/index.html
+++ b/index.html
@@ -41,11 +41,17 @@
 
   <div id="dailytotal" class="col-lg">
     <h2>Daily Totals:</h2>
-    <p>Calories:<span id="calories"></span></p>
-    <p>Carbohydrate:<span id="carbs"></span></p>
-    <p>Protein:<span id="totprotein"></span></p>
-    <p>Transfat:<span id="trans-fat"></span></p>
-    <p>SaturatedFat:<span id="saturated-fatt"></span></p>
+    <div id="total-container"></div>
+    <br>
+    <span id="totalcalories"></span>
+    
+    <span id="totalcarbs"></span>
+    <br>
+    <span id="totprotein"></span>
+    <br>
+    <span id="transfattotal"></span>
+    <br>
+    <span id="saturated-fat"></span>
   </div>
 
   <div id="card-container">
