--- a/index.html
+++ b/index.html
@@ -66,6 +66,37 @@
       </div>
     </div>
   </div>
+  <div class="footer-container">
+  <div class="footer">
+    <div class="footer-heading footer-1">
+      <h4><b>   You Are What You Eat   </b></h4>
+      <p>   Lorem ipsum dolor sit amet, consectetur adipiscing elit,<br> sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+    </div>
+    <div class="footer-heading footer-2">
+      <h4><b>   About Us   </b></h4>
+      <br><a href="#">Who we are</a>
+      <br><a href="https://bootcamp.ucdavis.edu/about/">UCD Bootcamp</a>
+    </div>
+    <div class="footer-heading footer-3">
+      <h4><b>   Learn more  </b></h4>
+      <br><a href="#">Healthy Recipes</a>
+      <br><a href="#">Simple Recipes</a>
+      <br><a href="#">Daily Nutrients <br>needed</a>
+    </div>
+    <div class="footer-heading footer-4">
+      <h4><b>   Contact Info  </b></h4>
+      <br><a href="mailto:UCD@bootcamp.com">Email us</a>
+      <br><a href="tel:666-666-666">Phone us</a>
+      <br><a href="https://www.instagram.com/ucdavis/">Our Social Media</a>
+    </div>
+    <div class="Footer-email-form">
+      <h4><b>  Join our newsletter for weekly updates!!   </b></h4>
+      <input type="email" placeholder="Enter email address" id="footer-email">
+      <input type="submit" value="Sign up! Super Easy!"
+      id="footer-email-btn">
+    </div>
+  </div>   
+</div>
   <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
   <script src="./assets/js/script.js"></script>
 </body>
