--- a/index.html
+++ b/index.html
@@ -22,46 +22,48 @@
     </div>
   </header>
 
-  <div id="search-container" class="container-fluid col-sm text-center">
-    <!--search and save section-->
-    <section id="search-area-title" class="search-area">
-      <h2 class="search-area-title"></h2>
-      <h2> Search for food!</h2>
-    </section>
-    <form id="search-form" class="form w-100">
-      <div id="search-image"></div>
-      <!--search bar and search button-->
-      <input id="search-input" class="form-input w-100" type="text" placeholder="100g Orange Juice">
-      <button class="btn searchBtn btn-info btn-block" id="fetch-button">Search</button>
-      <!--save button-->
-      <button class="btn saveBtn btn-info btn-block" id="save-button">Save</button>
+  <div id="main-content">
+    <div id="search-container" class="container-fluid col-sm text-center">
+      <!--search and save section-->
+      <section id="search-area-title" class="search-area">
+        <h2 class="search-area-title"></h2>
+        <h2> Search for food!</h2>
       </section>
-      <ul class="foodlist" style = "list-style-type: none; padding-left: 0px;"></ul>
-  </div>
+      <form id="search-form" class="form w-100">
+        <div id="search-image"></div>
+        <!--search bar and search button-->
+        <input id="search-input" class="form-input w-100" type="text" placeholder="100g Orange Juice">
+        <button class="btn searchBtn btn-info btn-block" id="fetch-button">Search</button>
+        <!--save button-->
+        <button class="btn saveBtn btn-info btn-block" id="save-button">Save</button>
+        </section>
+        <ul class="foodlist" style = "list-style-type: none; padding-left: 0px;"></ul>
+    </div>
 
-  <div id="dailytotal" class="col-lg">
-    <h2>Daily Totals:</h2>
-    <div id="total-container"></div>
-    <br>
-    <span id="totalcalories"></span>
-    
-    <span id="totalcarbs"></span>
-    <br>
-    <span id="totprotein"></span>
-    <br>
-    <span id="transfattotal"></span>
-    <br>
-    <span id="saturated-fat"></span>
-  </div>
+    <div id="dailytotal" class="col-lg">
+      <h2>Daily Totals:</h2>
+      <div id="total-container"></div>
+      <br>
+      <span id="totalcalories"></span>
+      
+      <span id="totalcarbs"></span>
+      <br>
+      <span id="totprotein"></span>
+      <br>
+      <span id="transfattotal"></span>
+      <br>
+      <span id="saturated-fat"></span>
+    </div>
 
-  <div id="card-container">
-    <div class="container-fluid col-lg pt-5">
-      <h3>Types of Food Consumed:</h3>
-      <div id="card-display" class="row">
-        <div class="col-md-6">
-          <h5 class="card-title"></h5>
-          <h6 class="card-subtitle mb-2 text-muted"></h6>
-          <p id="nutritional-card" class="card-text"></p>
+    <div id="card-container">
+      <div class="container-fluid col-lg pt-5">
+        <h3>Types of Food Consumed:</h3>
+        <div id="card-display" class="row">
+          <div class="col-md-6">
+            <h5 class="card-title"></h5>
+            <h6 class="card-subtitle mb-2 text-muted"></h6>
+            <p id="nutritional-card" class="card-text"></p>
+          </div>
         </div>
       </div>
     </div>
@@ -70,7 +72,6 @@
   <div class="footer">
     <div class="footer-heading footer-1">
       <h4><b>   You Are What You Eat   </b></h4>
-      <p>   Lorem ipsum dolor sit amet, consectetur adipiscing elit,<br> sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
     </div>
     <div class="footer-heading footer-2">
       <h4><b>   About Us   </b></h4>
