--- a/index.html
+++ b/index.html
@@ -75,14 +75,14 @@
     </div>
     <div class="footer-heading footer-2">
       <h4><b>   About Us   </b></h4>
-      <br><a href="#">Who we are</a>
+      <br><a href="about us.html">Who we are</a>
       <br><a href="https://bootcamp.ucdavis.edu/about/">UCD Bootcamp</a>
     </div>
     <div class="footer-heading footer-3">
       <h4><b>   Learn more  </b></h4>
-      <br><a href="#">Healthy Recipes</a>
-      <br><a href="#">Simple Recipes</a>
-      <br><a href="#">Daily Nutrients <br>needed</a>
+      <br><a href="https://fruitsandveggies.org/">Healthy Recipes</a>
+      <br><a href="https://www.saltandlavender.com/">Simple Recipes</a>
+      <br><a href="https://health.gov/sites/default/files/2019-09/Appendix-E3-1-Table-A4.pdf">Daily Nutrients <br>needed</a>
     </div>
     <div class="footer-heading footer-4">
       <h4><b>   Contact Info  </b></h4>
